[IMP]crm,Sales_team: misc improvement [FIX]sales_team: sparkline bar should be align to its relevant item, apply gruop base.group_no_one on 'code' field, used many2many_kanban widget to display team members in kanban box. [FIX]Fixed the issue of Sales Team Kanban Stages have NO impact on the opportunities stages. [ADD] added function field calls_count into crm.lead to count the number of calls, improve form view of lead and opportunity, added new subtype 'Opportunity created', and added help to message_bounce field. [IMP]Remove create quotation button keep only 'convert to quotation' button, and fixed issue of comapign_id, medium_id, source_id not set in quotation when it create from Opportunity.

--- a/addons/crm/static/src/css/crm.css
+++ b/addons/crm/static/src/css/crm.css
@@ -2,3 +2,6 @@
 .openerp .oe_margin_top_8 {
 	margin-top: 8px;
 }
+.openerp .oe_title_width {
+	width: 400px;
+}
