--- a/addons/project/static/src/css/project.css
+++ b/addons/project/static/src/css/project.css
@@ -27,7 +27,7 @@
   cursor: default;
 }
 
-.openerp .oe_kanban_view .oe_sparkline_bar {
+.openerp .oe_kanban_view .oe_kanban_project .oe_sparkline_bar {
     height: 20px;
     width: 30px;
     display: inline;
